import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.SpotBugsTask
import org.springframework.boot.gradle.tasks.bundling.BootJar

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'checkstyle'
    id 'com.github.spotbugs' version '6.5.11'
    id 'com.palantir.git-version' version '5.0.0'
    id 'pmd'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    springCloudVersion = "2025.1.3"
    mapstructVersion = "1.6.3"
    springdocOpenApiVersion = "3.1.0"
    springHateoasVersion = "3.1.2"
    commonsLang3Version = "3.20.0"
    lombokVersion= "1.18.46"
    postgresqlVersion= "42.7.13"
    spotbugsVersion = "4.10.4"
    micrometerVersion = "1.7.1"
    jwtVersion = "0.13.0"
    embeddedRedisVersion = "1.4.3"
    awaitilityVersion = "4.3.0"
    findsecbugsVersion = "1.14.0"
    testcontainersVersion = "1.21.4"
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Spring Cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
    implementation 'org.springframework.cloud:spring-cloud-config-client'
    implementation 'org.springframework.cloud:spring-cloud-starter'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Others
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenApiVersion}"
    implementation "org.springframework.hateoas:spring-hateoas:${springHateoasVersion}"
    implementation "io.micrometer:micrometer-tracing-bridge-brave:${micrometerVersion}"
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"

    implementation "org.flywaydb:flyway-core"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}"

    spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugsVersion}"

    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    runtimeOnly "org.flywaydb:flyway-database-postgresql"
    runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"

    // Test Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.projectlombok:lombok:${lombokVersion}"
    testImplementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
    testImplementation "org.wiremock.integrations:wiremock-spring-boot:4.2.2"
    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
    testImplementation "org.springframework.boot:spring-boot-testcontainers"
    testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('bootJar', BootJar) {
    archiveFileName.set('app.jar')
}

tasks.named('jar', Jar) {
    enabled = false
}

springBoot {
    buildInfo {
        properties {
            group = "com.buddy.api"
            version = versionDetails().lastTag ?: "0.0.0"
            additional = ['developers': 'hywenklis.']
        }
    }
}

tasks.named('test', Test) {
    useJUnitPlatform()
    finalizedBy("jacocoTestReport")
}

tasks.named('jacocoTestReport', JacocoReport) {
    reports {
        xml.required.set(true)
        csv.required.set(true)
        html.required.set(true)
    }
}

checkstyle {
    toolVersion = '13.3.0'
    configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
    maxWarnings = 0
    showViolations = true
    ignoreFailures = false
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required.set(false)
        html.required.set(true)
    }
}

tasks.named('checkstyleMain').configure {
    dependsOn tasks.named('compileJava')
}

tasks.named('checkstyleTest').configure {
    dependsOn tasks.named('compileTestJava')
}

tasks.withType(SpotBugsTask).configureEach {
    reports {
        xml.required.set(false)
        html.required.set(true)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll([
            "-parameters",
            "-Amapstruct.defaultComponentModel=spring",
            "-Amapstruct.unmappedTargetPolicy=IGNORE"
    ])
}

spotbugs {
    ignoreFailures = false
    showStackTraces = true
    showProgress = true
    effort = Effort.MAX
    reportLevel = Confidence.valueOf('HIGH')
    excludeFilter = file('config/spotbugs/spotbugs-exclude.xml')
}

pmd {
    toolVersion = "7.22.0"
    ignoreFailures = false
    consoleOutput = true
    sourceSets = [sourceSets.main]
}
